--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,7 @@
 		<dependency>
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
-			<version>7.9.0</version>
-			<scope>test</scope>
+			<version>7.10.2</version>
 		</dependency>
 
 		<dependency>
@@ -42,7 +41,7 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<version>1.18.28</version> <!-- Use the latest version -->
+			<version>1.18.30</version> <!-- Check for the latest version -->
 			<scope>provided</scope>
 		</dependency>
 
@@ -56,10 +55,22 @@
 				<version>3.5.0</version>
 				<configuration>
 					<suiteXmlFiles>
-						<suiteXmlFile>XMLfiles/testng.xml</suiteXmlFile>
+						<suiteXmlFile>testng.xml</suiteXmlFile>
 					</suiteXmlFiles>
 				</configuration>
 			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.13.0</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+					<fork>true</fork>
+				</configuration>
+			</plugin>
+
 		</plugins>
 	</build>
 </project>
